--- a/gbot2.0/requirements.txt
+++ b/gbot2.0/requirements.txt
@@ -1,6 +1,7 @@
 line-bot-sdk==3.1.1
 gradio==4.44.0
-requests==2.31.0
+scikit-learn==1.5.0
+numpy==1.26.4
+geopy==2.4.1
 flask==2.3.3
-python-dotenv==1.0.1
 gunicorn==22.0.0
