--- a/gbot2.0/requirements.txt
+++ b/gbot2.0/requirements.txt
@@ -1,8 +1,7 @@
-line-bot-sdk==3.1.1
-gradio==4.44.0
-scikit-learn==1.5.0
-numpy==1.26.4
-geopy==2.4.1
-geographiclib==2.0
-flask==2.3.3
-gunicorn==22.0.0
+numpy
+python-dotenv
+scikit-learn
+geopy
+gradio
+flask
+line-bot-sdk==3.17.1
